[package]
name = "space-drive-game"
version = "0.1.0"
edition = "2021"
authors = ["Vladimir Alinsky"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "space_drive_game"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.2"
rand = "0.8.5"

[package.metadata.maturin]
python-source = "python"
