[package]
name = "space_drive_game_server"

workspace = ".."

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
envy = "0.4.2"
thiserror = "1.0.57"
signal-hook = "0.3.17"
reqwest = { version = "0.11.24", features = ["blocking"] }

[dependencies.space_drive_game_core]
path = "../core"
